:recycle: [STMT-168] tag 삭제 query 최적화
- mapper에서 .collect(Collectors.toList());로 변경한 이유는 @OneToMany 매핑에서는 해당 컬렉션이 변경가능한 상태가 아니면 UnsupportedOperationException 에러가 발생하여 변경 가능한 컬렉션으로 변경했습니다.